Minor styling, discovered Single Product button bug. Started fixing but stuck.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  --primary: #edd4fa;
+  --primary: #d6b9e5;
   --secondary: #98ceb5;
   --tertiary: #acdff7;
   --light: #fbfbfb;
